# ComfyUI-Phi-3-mini

./: Phi3mini.py  README.md  __init__.py  pyproject.toml  requirements.txt
Phi-3-min Workflows/: Phi-3-mini-4k + CosXL【Zho】.json  Phi-3-mini-4k Chat【Zho】.json
